kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trafficjamz-backend-service
spec:
  selector:
    app: trafficjamz-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
